# limitations under the License.
#

Hedgehog 2.0.0b2
-----------------------------

* Support for Vagrant Provisioning (thanks melalj)
* Various installation changes to support packaging (thanks arhbkb)
* Changed the yaml parsing to use the Perl YAML::Tiny library
* Changed the default_interactive_plot_type to svg (instead of flash)
* Static Traffic Volume plot is now faceted by Transport vs IP version
* Traffic Query/Response Difference plots added (requires R package dplyr)
* RPostgreSQLHelper installed as separate package. This requires running
 'make install ; make install-rpg' on installation now.
* Added axis labels to googlevis line charts
* Added node_id index to data tables
* Added support for connecting to a remote database and password support
* Fixed color palette in annotated charts
* Work around for mages/googleVis#14
* Corrected previous commit where font sizes were changed unnecessarily.
* Improved old xml tar script

Hedgehog 2.0.0b1 - 2014-09-09
-----------------------------

* Database schema changes: Plot table split into 3 and replaced by a view.
  Added explicit handling of plots based on 2 datasets.
  ****** Database version bumped - not backwards compatible *****
* Added new config option 'default_interactive_plot_type' to 
  hedgehog_gui.yaml. This can be used to generate SVG interactive plots
  instead of the default interactive plots which require Flash.
* Issue-#1: hedgehog_gui.yaml configuration file is now installed in
  <prefix>/etc/hedgeghog
* Database version mismatch now reported correctly in the GUI


Hedgehog 2.0.0a1 - 2014-08-27
----------------------------

* Initial open source alpha release including:
  * Data importer (refile_and_grok.sh)
    - DAT-> Postgres database importer
    - XML-> Postgres database importer
    - XML-> DAT converter
  * Database schema and scripts
  * Web GUI
  * Support for multiple servers
  * Support for import of RSSAC data (from XML only)