@@ -1,0 +1,3 @@
+This directory contains scripts that are used to update the database as new
+features and bug fixes occur. The database keeps a record of which of these has
+been run. They should be run in numerical order.
